Cleanup build.gradle