@@ -44,12 +44,6 @@ android {
     dexOptions {
         javaMaxHeapSize "2g"
     }
-    testOptions {
-        unitTests.all {
-            jvmArgs '-XX:MaxPermSize=256m'
-        }
-        unitTests.returnDefaultValues = true
-    }
 }
 
 dependencies {
@@ -63,17 +57,18 @@ dependencies {
     compile 'com.android.support:multidex:1.0.1'
     // Google Cloud Messaging
     compile 'com.google.android.gms:play-services:9.0.2'
-    // Other libraries
+    // Libraries for data fetching/management
+    compile 'com.android.volley:volley:1.0.0'
+    compile 'com.google.code.gson:gson:2.6.2'
+    // Libraries for image displaying
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
     compile 'com.github.chrisbanes:PhotoView:1.2.6'
     compile 'de.hdodenhof:circleimageview:2.0.0'
-    compile 'com.android.volley:volley:1.0.0'
+    // Other libraries
     compile 'us.feras.mdv:markdownview:1.1.0'
-//    compile 'com.google.code.gson:gson:2.4'
 
     // Testing
-//    testCompile 'junit:junit:4.12'
-//    testCompile 'org.mockito:mockito-core:1.10.19'
+    // testCompile 'junit:junit:4.12'
 }
 
 // This needs to be on the bottom
